Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json
@@ -87,7 +87,7 @@
   "dn6:12.2": "„Nein, Mahāli, die Mönche und Nonnen führen unter mir nicht das geistliche Leben, um eine solche Versenkung entwickeln zu können. ",
   "dn6:12.3": "Es gibt andere, höhere und erlesenere Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen.“ ",
   "dn6:13.0": "2.2. Die vier edlen Früchte ",
-  "dn6:13.1": "„Aber Herr, was sind diese erleseneren Dinge?“ ",
+  "dn6:13.1": "„Aber Herr, was sind diese höheren und erleseneren Dinge?“ ",
   "dn6:13.2": "„Zuerst, Mahāli, ist da ein Mönch mit dem Auflösen von drei Fesseln in den Strom eingetreten, muss nicht mehr in der Unterwelt wiedergeboren werden und ist für das Erwachen bestimmt. ",
   "dn6:13.3": "Das ist eines dieser erleseneren Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen. ",
   "dn6:13.4": "Dann ist da ein Mönch mit dem Auflösen von drei Fesseln und dem Abschwächen von Gier, Hass und Täuschung ein Einmalwiederkehrer. Nur einmal kehrt er in diese Welt zurück, um dann dem Leiden ein Ende zu machen. ",
