--- a/translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json
@@ -91,7 +91,7 @@
   "dn6:13.2": "„Zuerst, Mahāli, ist da ein Mönch mit dem Auflösen von drei Fesseln in den Strom eingetreten, muss nicht mehr in der Unterwelt wiedergeboren werden und ist für das Erwachen bestimmt. ",
   "dn6:13.3": "Das ist eines dieser höheren und erleseneren Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen. ",
   "dn6:13.4": "Dann ist da ein Mönch mit dem Auflösen von drei Fesseln und dem Abschwächen von Gier, Hass und Täuschung ein Einmalwiederkehrer. Nur einmal kehrt er in diese Welt zurück, um dann dem Leiden ein Ende zu machen. ",
-  "dn6:13.5": "Auch das ist eines dieser erleseneren Dinge. ",
+  "dn6:13.5": "Auch das ist eines dieser höheren und erleseneren Dinge. ",
   "dn6:13.6": "Dann wird da ein Mönch mit dem Auflösen der fünf niederen Fesseln durch unmittelbares Erscheinen wiedergeboren. Er erlischt dort und muss von jener Welt nicht zurückkehren. ",
   "dn6:13.7": "Auch das ist eines dieser erleseneren Dinge. ",
   "dn6:13.8": "Dann hat da ein Mönch mit der Auflösung der Befleckungen noch in diesem Leben die fleckenlose Freiheit des Herzens erlangt, die fleckenlose Freiheit durch Weisheit, hat sie durch eigene Einsicht erkannt und lebt darin. ",
