--- a/translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json
@@ -95,7 +95,7 @@
   "dn6:13.6": "Dann wird da ein Mönch mit dem Auflösen der fünf niederen Fesseln durch unmittelbares Erscheinen wiedergeboren. Er erlischt dort und muss von jener Welt nicht zurückkehren. ",
   "dn6:13.7": "Auch das ist eines dieser höheren und erleseneren Dinge. ",
   "dn6:13.8": "Dann hat da ein Mönch mit der Auflösung der Befleckungen noch in diesem Leben die fleckenlose Freiheit des Herzens erlangt, die fleckenlose Freiheit durch Weisheit, hat sie durch eigene Einsicht erkannt und lebt darin. ",
-  "dn6:13.9": "Auch das ist eines dieser erleseneren Dinge. ",
+  "dn6:13.9": "Auch das ist eines dieser höheren und erleseneren Dinge. ",
   "dn6:13.10": "Das sind diese erleseneren Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen.“ ",
   "dn6:14.0": "2.3. Der edle achtfache Pfad ",
   "dn6:14.1": "„Aber, Herr, gibt es einen Pfad und eine Übung, um diese Dinge zu verwirklichen?“ ",
