Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -165,5 +165,6 @@
   "mn79:37.1": "Er gibt diese fünf Hindernisse auf, die Verunreinigungen des Herzens, die die Weisheit schwächen. ",
   "mn79:37.2": "Dann tritt er, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin. ",
   "mn79:37.3": "Das ist eines dieser höheren und erleseneren Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen. ",
-  "mn79:38-40.1": "Dann beruhigt sich da bei einem Mönch das Ausrichten und Halten des Geistes, und er tritt in die zweite Vertiefung ein und verweilt darin … "
+  "mn79:38-40.1": "Dann beruhigt sich da bei einem Mönch das Ausrichten und Halten des Geistes, und er tritt in die zweite Vertiefung ein und verweilt darin … ",
+  "mn79:38-40.2": "in die dritte Vertiefung … "
 }
