--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -167,5 +167,6 @@
   "mn79:37.3": "Das ist eines dieser höheren und erleseneren Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen. ",
   "mn79:38-40.1": "Dann beruhigt sich da bei einem Mönch das Ausrichten und Halten des Geistes, und er tritt in die zweite Vertiefung ein und verweilt darin … ",
   "mn79:38-40.2": "in die dritte Vertiefung … ",
-  "mn79:38-40.3": "in die vierte Vertiefung. "
+  "mn79:38-40.3": "in die vierte Vertiefung. ",
+  "mn79:38-40.4": "Auch das ist eines dieser höheren und erleseneren Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen. "
 }
