Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -168,5 +168,6 @@
   "mn79:38-40.1": "Dann beruhigt sich da bei einem Mönch das Ausrichten und Halten des Geistes, und er tritt in die zweite Vertiefung ein und verweilt darin … ",
   "mn79:38-40.2": "in die dritte Vertiefung … ",
   "mn79:38-40.3": "in die vierte Vertiefung. ",
-  "mn79:38-40.4": "Auch das ist eines dieser höheren und erleseneren Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen. "
+  "mn79:38-40.4": "Auch das ist eines dieser höheren und erleseneren Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen. ",
+  "mn79:41.1": "Wenn der Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, dann streckt er ihn aus auf die Erinnerung an frühere Leben. "
 }
