--- a/translation/hi/trush/sutta/mn/mn4_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn4_translation-hi-trush.json
@@ -8,7 +8,7 @@
   "mn4:2.3": "“मित्र गौतम, जो भी कुलवान सज्जन जो गौतम में श्रद्धा रख के घरबार छोड़ के संन्यास लेते हैं, उनको मार्गदर्शन, सहायता, और प्रोत्साहन देने के लिये मित्र गौतम उपस्थित हैं; ",
   "mn4:2.4": "और वह सज्जन मित्र गौतम के उदाहरण का अनुसरण करते हैं”। ",
   "mn4:2.5": "“ऐसा ही है, ब्राह्मण, ऐसा ही है, ब्राह्मण। ",
-  "mn4:2.6": "ब्राह्मण, जो भी कुलवान सज्जन मुझ में श्रद्धा रख के घरबार छोड़ के संन्यास लेते हैं, उनको मार्गदर्शन, सहायता, और प्रोत्साहन देने के लिये मैं उपस्थित हूँ। ",
+  "mn4:2.6": "ब्राह्मण, जो भी कुलवान सज्जन मुझ में श्रद्धा रख के घरबार छोड़ के संन्यास लेते हैं, उनको मार्गदर्शन, सहायता, और प्रोत्साहन देने के लिये मैं उपस्थित हूँ; ",
   "mn4:2.7": "और वह सज्जन मेरा उदाहरण का अनुसरण करते हैं। ",
   "mn4:2.8": "लेकिन मित्र गौतम, दूर वन व जंगल की कुटिया में निवास कठिन है। एकांतवास मुश्किल है, अकेलेपन में आनंद अनुभव करना कठिन है, ",
   "mn4:2.9": "जो भिक्षु को समाधि प्राप्त नहीं हुई, जंगल मानो के उसके मन का हरण कर लेता है. ",
