--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -171,5 +171,6 @@
   "mn79:38-40.4": "Auch das ist eines dieser höheren und erleseneren Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen. ",
   "mn79:41.1": "Wenn der Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, dann streckt er ihn aus auf die Erinnerung an frühere Leben. ",
   "mn79:41.2": "Er erinnert sich an viele Arten früherer Leben, das heißt: eine Wiedergeburt, zwei Wiedergeburten, drei, vier, fünf, zehn, zwanzig, dreißig, vierzig, fünfzig, hundert, tausend, hunderttausend Wiedergeburten; viele Äonen des Zusammenziehens der Welt, viele Äonen des Ausdehnens der Welt, viele Äonen des Zusammenziehens und Ausdehnens der Welt … Und so erinnert er sich an viele Arten früherer Leben mit den Merkmalen und Einzelheiten. ",
-  "mn79:41.3": "Auch das ist eines dieser höheren und erleseneren Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen. "
+  "mn79:41.3": "Auch das ist eines dieser höheren und erleseneren Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen. ",
+  "mn79:42.1": "Wenn sein Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, dann streckt er ihn aus auf die Erkenntnis von Tod und Wiedergeburt der Lebewesen. "
 }
