--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -174,5 +174,6 @@
   "mn79:41.3": "Auch das ist eines dieser höheren und erleseneren Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen. ",
   "mn79:42.1": "Wenn sein Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, dann streckt er ihn aus auf die Erkenntnis von Tod und Wiedergeburt der Lebewesen. ",
   "mn79:42.2": "Mit geläuterter und übermenschlicher Hellsichtigkeit sieht er Lebewesen, wie sie hinscheiden und wieder geboren werden – gering oder hochstehend, schön oder hässlich, an einem guten oder einem schlechten Ort. … Er versteht, wie Lebewesen entsprechend ihrer Taten wiedergeboren werden. ",
-  "mn79:42.3": "Auch das ist eines dieser höheren und erleseneren Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen. "
+  "mn79:42.3": "Auch das ist eines dieser höheren und erleseneren Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen. ",
+  "mn79:43.1": "Wenn sein Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt – dann streckt er ihn aus auf die Erkenntnis, dass die Befleckungen aufgelöst sind. "
 }
