--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -185,5 +185,6 @@
   "mn79:44.5": "Das sind diese höheren und erleseneren Dinge, um derentwillen die Mönche und Nonnen unter mir das geistliche Leben führen.“ ",
   "mn79:45.1": "Auf diese Worte sagte der Wanderer Sakuludāyī zum Buddha: ",
   "mn79:45.2": "„Vortrefflich, Herr! Vortrefflich! ",
-  "mn79:45.3": "Als würde er das Umgestürzte aufrichten oder das Verborgene enthüllen oder den Verirrten den Weg weisen oder im Dunkeln ein Licht anzünden, sodass Menschen mit klaren Augen sehen könnten, was da ist, so hat der Buddha die Lehre auf vielerlei Weise klargemacht. "
+  "mn79:45.3": "Als würde er das Umgestürzte aufrichten oder das Verborgene enthüllen oder den Verirrten den Weg weisen oder im Dunkeln ein Licht anzünden, sodass Menschen mit klaren Augen sehen könnten, was da ist, so hat der Buddha die Lehre auf vielerlei Weise klargemacht. ",
+  "mn79:45.4": "Ich nehme Zuflucht zum Buddha, zur Lehre und zum Saṅgha der Mönche und Nonnen. "
 }
