--- a/translation/it/soma/sutta/sn/sn47/sn47.4_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn47/sn47.4_translation-it-soma.json
@@ -11,7 +11,7 @@
   "sn47.4:3.2": "x ",
   "sn47.4:3.3": "x ",
   "sn47.4:3.4": "x ",
-  "sn47.4:4.1": "Quei cercatori risvegliati (arahant), che hanno distrutto ogni compulsione (āsava), si sono realizzati, hanno fatto quello che si doveva fare, hanno posato il fardello, raggiunto il traguardo più ambizioso, reciso le catene dell’esistenza, si sono liberati grazie alla corretta comprensione, anche loro dimorano...... liberi dal giogo del corpo. ",
+  "sn47.4:4.1": "Quei cercatori risvegliati (arahant), che hanno distrutto le compulsioni (āsava), si sono realizzati, hanno fatto quello che si doveva fare, hanno posato il fardello, raggiunto il traguardo più ambizioso, reciso le catene dell’esistenza, si sono liberati grazie alla corretta comprensione, anche loro dimorano...... liberi dal giogo del corpo. ",
   "sn47.4:4.2": "x ",
   "sn47.4:4.3": "x ",
   "sn47.4:4.4": "x ",
