--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -24,7 +24,7 @@
   "iti112:8.2": "libero da ogni legame* ",
   "iti112:8.3": "ha ottenuto la serenità più alta ",
   "iti112:8.4": "il Nibbāna dopo cui non c’è nulla da temere ",
-  "iti112:9.1": "Il Buddha ha distrutto ogni compulsione, ",
+  "iti112:9.1": "Il Buddha ha distrutto le compulsioni, ",
   "iti112:9.2": "è indisturbato, ha reciso ogni dubbio, ** ",
   "iti112:9.3": "e ottenuta la distruzione di ogni karma ",
   "iti112:9.4": "libero con l’eradicazione dell’acquisizione/appropriazione ",
