--- a/translation/it/soma/sutta/sn/sn36/sn36.31_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn36/sn36.31_translation-it-soma.json
@@ -10,7 +10,7 @@
   "sn36.31:2.1": "E qual è l’estasi spirituale? (oltremondana**) ",
   "sn36.31:2.2": "Quando ci si stacca dai piaceri dei sensi e dalle qualità non benefiche e si raggiunge e rimane nel primo Jhāna, che ha ancora pensiero* e investigazione*, nasce dalla reclusione, e presenta estasi e agio. *** ",
   "sn36.31:3.1": "E qual è l’estasi ancora più spirituale? oltremondana ** ",
-  "sn36.31:3.2": "Quando un cercatore che ha distrutto ogni compulsione passa in rassegna (osserva/discerne) che il cuore/mente è libero da qualsiasi tipo di passione, avversione (odio), e illusione. ",
+  "sn36.31:3.2": "Quando un cercatore che ha distrutto le compulsioni passa in rassegna (osserva/discerne) che il cuore/mente è libero da qualsiasi tipo di passione, avversione (odio), e illusione. ",
   "sn36.31:4.1": "??? ",
   "sn36.31:4.2": "??? ",
   "sn36.31:4.4": "? ",
