--- a/translation/it/soma/sutta/kn/iti/vagga10/iti96_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti96_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti96:4.2": "senza raggiungere l’eliminazione delle compulsioni, ",
   "iti96:4.3": "ancora soggiogato dall’esistenza, ",
   "iti96:4.4": "quello è detto uno che non ritorna. ",
-  "iti96:5.1": "Ma chi ha eliminato il dubbio ",
+  "iti96:5.1": "Ma chi ha reciso il dubbio ",
   "iti96:5.2": "e ha eliminato la presunzione e nuova esistenza, ",
   "iti96:5.3": "davvero nel mondo ha raggiunto l’altra sponda ",
   "iti96:5.4": "e ottenuto la distruzione delle compulsioni. "
