--- a/translation/it/soma/sutta/kn/iti/vagga10/iti96_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti96_translation-it-soma.json
@@ -13,5 +13,5 @@
   "iti96:5.1": "Ma chi ha reciso il dubbio ",
   "iti96:5.2": "e ha eliminato/distrutto la presunzione e nuova esistenza, ",
   "iti96:5.3": "davvero nel mondo ha raggiunto l’altra sponda ",
-  "iti96:5.4": "e ottenuto la distruzione delle compulsioni. "
+  "iti96:5.4": "e ottenuto la distruzione/l’eliminazione delle compulsioni. "
 }
