--- a/translation/it/soma/sutta/kn/iti/vagga10/iti97_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti97_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti97:2.1": "Cercatori, in questo insegnamento e disciplina un cercatore che ha buona virtù, buona natura e buona saggezza è detto perfetto, realizzato, una persona superiore. ",
+  "iti97:2.1": "Cercatori, in questo insegnamento e disciplina (in questa religione) un cercatore che ha buona virtù, buona natura e buona saggezza è detto perfetto, realizzato, una persona superiore. ",
   "iti97:3.1": "E in che modo un cercatore ha una buona virtù? ",
   "iti97:3.2": "Quando un cercatore vive virtuoso, temperato e moderato (contenuto) dal pātimokkha, con una perfetta condotta e compagnia (provetto nella condotta e nella questua), vedendo il pericolo negli errori più piccoli, addestrandosi con i precetti. ",
   "iti97:4.1": "E in che modo un cercatore ha una buona natura? ",
