--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -189,5 +189,6 @@
   "mn79:45.4": "Ich nehme Zuflucht zum Buddha, zur Lehre und zum Saṅgha der Mönche und Nonnen. ",
   "mn79:45.5": "Herr, darf ich vor dem Buddha die Weihe des Fortziehens erhalten, die Ordination?“ ",
   "mn79:46.1": "Daraufhin sagte Sakuludāyīs Versammlung zu ihm: ",
-  "mn79:46.2": "„Herr Udāyī, führe nicht das geistliche Leben unter dem Asketen Gotama. "
+  "mn79:46.2": "„Herr Udāyī, führe nicht das geistliche Leben unter dem Asketen Gotama. ",
+  "mn79:46.3": "Du warst ein Lehrmeister; lebe nicht als Zögling. "
 }
