Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -190,5 +190,6 @@
   "mn79:45.5": "Herr, darf ich vor dem Buddha die Weihe des Fortziehens erhalten, die Ordination?“ ",
   "mn79:46.1": "Daraufhin sagte Sakuludāyīs Versammlung zu ihm: ",
   "mn79:46.2": "„Herr Udāyī, führe nicht das geistliche Leben unter dem Asketen Gotama. ",
-  "mn79:46.3": "Du warst ein Lehrmeister; lebe nicht als Zögling. "
+  "mn79:46.3": "Du warst ein Lehrmeister; lebe nicht als Zögling. ",
+  "mn79:46.4": "Dir wird es ergehen wie einem Wasserkrug, der zu einer Wasser-Schöpfkelle wird. "
 }
