Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -122,7 +122,7 @@
   "mn79:21.3": "Das ist die begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen.“ ",
   "mn79:22.1": "„Was denkst du, Udāyī? ",
   "mn79:22.2": "Zu einer Zeit, zu der jemand das Töten aufgibt und nicht mehr tötet, ist zu dieser Zeit sein Selbst ausschließlich glücklich, oder erlebt es sowohl Glück als auch Schmerz?“ ",
-  "mn79:22.3": "„Es erlebt sowohl glück als auch Schmerz, Herr.“ ",
+  "mn79:22.3": "„Es erlebt sowohl Glück als auch Schmerz, Herr.“ ",
   "mn79:22.4": "„Was denkst du, Udāyī? ",
   "mn79:22.5": "Zu einer Zeit, zu der jemand das Stehlen aufgibt und nicht mehr stiehlt … ",
   "mn79:22.7": "Zu einer Zeit, zu der jemand sexuelle Verfehlungen aufgibt und keine sexuellen Verfehlungen mehr begeht … ",
