--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "mn80:0.1": "Mittlere Lehrreden 80 ",
-  "mn80:0.2": "Mit Vekhanasa "
+  "mn80:0.2": "Mit Vekhanasa ",
+  "mn80:1.1": "So habe ich es gehört: "
 }
