--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "mn80:2.1": "Da ging der Wanderer Vekhanasa zum Buddha und tauschte Willkommensgrüße mit ihm aus. ",
   "mn80:2.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten stellte er sich zur Seite hin ",
   "mn80:2.3": "und drückte dieses innige Gefühl aus: ",
-  "mn80:2.4": "„Das ist der höchste Glanz, das ist der höchste Glanz.“ "
+  "mn80:2.4": "„Das ist der höchste Glanz, das ist der höchste Glanz.“ ",
+  "mn80:2.5": "„Aber Kaccāna, warum sagst du: "
 }
