--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "mn80:2.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten stellte er sich zur Seite hin ",
   "mn80:2.3": "und drückte dieses innige Gefühl aus: ",
   "mn80:2.4": "„Das ist der höchste Glanz, das ist der höchste Glanz.“ ",
-  "mn80:2.5": "„Aber Kaccāna, warum sagst du: "
+  "mn80:2.5": "„Aber Kaccāna, warum sagst du: ",
+  "mn80:2.6": "‚Das ist der höchste Glanz, das ist der höchste Glanz‘? "
 }
