Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "mn80:2.3": "und drückte dieses innige Gefühl aus: ",
   "mn80:2.4": "„Das ist der höchste Glanz, das ist der höchste Glanz.“ ",
   "mn80:2.5": "„Aber Kaccāna, warum sagst du: ",
-  "mn80:2.6": "‚Das ist der höchste Glanz, das ist der höchste Glanz‘? "
+  "mn80:2.6": "‚Das ist der höchste Glanz, das ist der höchste Glanz‘? ",
+  "mn80:2.7": "Was ist dieser höchste Glanz?“ "
 }
