Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "mn80:2.4": "„Das ist der höchste Glanz, das ist der höchste Glanz.“ ",
   "mn80:2.5": "„Aber Kaccāna, warum sagst du: ",
   "mn80:2.6": "‚Das ist der höchste Glanz, das ist der höchste Glanz‘? ",
-  "mn80:2.7": "Was ist dieser höchste Glanz?“ "
+  "mn80:2.7": "Was ist dieser höchste Glanz?“ ",
+  "mn80:2.8": "„Herr Gotama, der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.“ "
 }
