--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "mn80:2.6": "‚Das ist der höchste Glanz, das ist der höchste Glanz‘? ",
   "mn80:2.7": "Was ist dieser höchste Glanz?“ ",
   "mn80:2.8": "„Herr Gotama, der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.“ ",
-  "mn80:2.9": "„Aber was ist dieser höchste Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist?“ "
+  "mn80:2.9": "„Aber was ist dieser höchste Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist?“ ",
+  "mn80:2.10": "„Herr Gotama, der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.“ "
 }
