Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "mn80:2.8": "„Herr Gotama, der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.“ ",
   "mn80:2.9": "„Aber was ist dieser höchste Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist?“ ",
   "mn80:2.10": "„Herr Gotama, der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.“ ",
-  "mn80:3.1": "„Kaccāna, du könntest noch lange so fortfahren. "
+  "mn80:3.1": "„Kaccāna, du könntest noch lange so fortfahren. ",
+  "mn80:3.2": "Du sagst: ‚Der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.‘ Aber du beschreibst diesen Glanz nicht. "
 }
