--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "mn80:2.10": "„Herr Gotama, der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.“ ",
   "mn80:3.1": "„Kaccāna, du könntest noch lange so fortfahren. ",
   "mn80:3.2": "Du sagst: ‚Der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.‘ Aber du beschreibst diesen Glanz nicht. ",
-  "mn80:3.3": "Angenommen, ein Mann würde sagen: "
+  "mn80:3.3": "Angenommen, ein Mann würde sagen: ",
+  "mn80:3.4": "‚Ganz gleich, wer die erlesenste Dame im Land ist, sie ist es, die ich will, die ich begehre!‘ "
 }
