--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "mn80:3.2": "Du sagst: ‚Der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.‘ Aber du beschreibst diesen Glanz nicht. ",
   "mn80:3.3": "Angenommen, ein Mann würde sagen: ",
   "mn80:3.4": "‚Ganz gleich, wer die erlesenste Dame im Land ist, sie ist es, die ich will, die ich begehre!‘ ",
-  "mn80:3.5": "Man würde zu ihm sagen: "
+  "mn80:3.5": "Man würde zu ihm sagen: ",
+  "mn80:3.6": "‚Guter Mann, diese erlesenste Dame im Land, die du begehrst – weißt du, ob sie eine Adlige, eine Brahmanin, eine Landarbeiterin oder eine Hilfsarbeiterin ist?‘ "
 }
