--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "mn80:3.5": "Man würde zu ihm sagen: ",
   "mn80:3.6": "‚Guter Mann, diese erlesenste Dame im Land, die du begehrst – weißt du, ob sie eine Adlige, eine Brahmanin, eine Landarbeiterin oder eine Hilfsarbeiterin ist?‘ ",
   "mn80:3.7": "Wenn er so gefragt würde, würde er sagen: ‚Nein.‘ ",
-  "mn80:3.8": "Man würde zu ihm sagen: "
+  "mn80:3.8": "Man würde zu ihm sagen: ",
+  "mn80:3.9": "‚Guter Mann, diese erlesenste Dame im Land, die du begehrst – kennst du ihren Namen oder ihren Stamm? Weißt du, ob sie groß, klein oder mittelgroß ist? Ob ihre Haut schwarz, braun oder lohfarben ist? Aus welchem Dorf, welchem Marktflecken oder welcher Stadt sie stammt?‘ "
 }
