Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "mn80:3.10": "Wenn er so gefragt würde, würde er sagen: ‚Nein.‘ ",
   "mn80:3.11": "Man würde zu ihm sagen: ",
   "mn80:3.12": "‚Guter Mann, begehrst du eine, die du nie auch nur gekannt oder gesehen hast?‘ ",
-  "mn80:3.13": "Wenn er so gefragt würde, würde er sagen: ‚Ja.‘ "
+  "mn80:3.13": "Wenn er so gefragt würde, würde er sagen: ‚Ja.‘ ",
+  "mn80:3.14": "Was denkst du, Kaccāna? "
 }
