Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "mn80:3.11": "Man würde zu ihm sagen: ",
   "mn80:3.12": "‚Guter Mann, begehrst du eine, die du nie auch nur gekannt oder gesehen hast?‘ ",
   "mn80:3.13": "Wenn er so gefragt würde, würde er sagen: ‚Ja.‘ ",
-  "mn80:3.14": "Was denkst du, Kaccāna? "
+  "mn80:3.14": "Was denkst du, Kaccāna? ",
+  "mn80:3.15": "Wenn das so ist, stellt sich da nicht heraus, dass die Aussage dieses Mannes keine beweisbare Grundlage hat?“ "
 }
