Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "mn80:3.13": "Wenn er so gefragt würde, würde er sagen: ‚Ja.‘ ",
   "mn80:3.14": "Was denkst du, Kaccāna? ",
   "mn80:3.15": "Wenn das so ist, stellt sich da nicht heraus, dass die Aussage dieses Mannes keine beweisbare Grundlage hat?“ ",
-  "mn80:3.16": "„Sicherlich ist das so, Herr Gotama.“ "
+  "mn80:3.16": "„Sicherlich ist das so, Herr Gotama.“ ",
+  "mn80:3.17": "„Ebenso sagst du: ‚Der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.‘ Aber du beschreibst diesen Glanz nicht.“ "
 }
