--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "mn80:5.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: das Schmuckstück aus Beryll, das auf ein cremefarbenes Tuch gelegt wurde, oder ein Glühwürmchen im Dunkel der Nacht?“ ",
   "mn80:5.3": "„Ein Glühwürmchen im Dunkel der Nacht, Herr.“ ",
   "mn80:6.1": "„Was denkst du, Kaccāna? ",
-  "mn80:6.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: ein Glühwürmchen im Dunkel der Nacht oder eine Öllampe im Dunkel der Nacht?“ "
+  "mn80:6.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: ein Glühwürmchen im Dunkel der Nacht oder eine Öllampe im Dunkel der Nacht?“ ",
+  "mn80:6.3": "„Eine Öllampe im Dunkel der Nacht, Herr.“ "
 }
