--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "mn80:6.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: ein Glühwürmchen im Dunkel der Nacht oder eine Öllampe im Dunkel der Nacht?“ ",
   "mn80:6.3": "„Eine Öllampe im Dunkel der Nacht, Herr.“ ",
   "mn80:7.1": "„Was denkst du, Kaccāna? ",
-  "mn80:7.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: eine Öllampe im Dunkel der Nacht oder eine große Feuersbrunst im Dunkel der Nacht?“ "
+  "mn80:7.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: eine Öllampe im Dunkel der Nacht oder eine große Feuersbrunst im Dunkel der Nacht?“ ",
+  "mn80:7.3": "„Eine große Feuersbrunst im Dunkel der Nacht, Herr.“ "
 }
