--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -40,5 +40,6 @@
   "mn80:7.1": "„Was denkst du, Kaccāna? ",
   "mn80:7.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: eine Öllampe im Dunkel der Nacht oder eine große Feuersbrunst im Dunkel der Nacht?“ ",
   "mn80:7.3": "„Eine große Feuersbrunst im Dunkel der Nacht, Herr.“ ",
-  "mn80:8.1": "„Was denkst du, Kaccāna? "
+  "mn80:8.1": "„Was denkst du, Kaccāna? ",
+  "mn80:8.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: eine große Feuersbrunst im Dunkel der Nacht oder der Morgenstern am klaren und wolkenlosen Himmel beim ersten Morgengrauen?“ "
 }
