--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -42,5 +42,6 @@
   "mn80:7.3": "„Eine große Feuersbrunst im Dunkel der Nacht, Herr Gotama.“ ",
   "mn80:8.1": "„Was denkst du, Kaccāna? ",
   "mn80:8.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: eine große Feuersbrunst im Dunkel der Nacht oder der Morgenstern am klaren und wolkenlosen Himmel beim ersten Morgengrauen?“ ",
-  "mn80:8.3": "„Der Morgenstern am klaren und wolkenlosen Himmel beim ersten Morgengrauen, Herr Gotama.“ "
+  "mn80:8.3": "„Der Morgenstern am klaren und wolkenlosen Himmel beim ersten Morgengrauen, Herr Gotama.“ ",
+  "mn80:9.1": "„Was denkst du, Kaccāna? "
 }
