--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -43,5 +43,6 @@
   "mn80:8.1": "„Was denkst du, Kaccāna? ",
   "mn80:8.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: eine große Feuersbrunst im Dunkel der Nacht oder der Morgenstern am klaren und wolkenlosen Himmel beim ersten Morgengrauen?“ ",
   "mn80:8.3": "„Der Morgenstern am klaren und wolkenlosen Himmel beim ersten Morgengrauen, Herr Gotama.“ ",
-  "mn80:9.1": "„Was denkst du, Kaccāna? "
+  "mn80:9.1": "„Was denkst du, Kaccāna? ",
+  "mn80:9.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: der Morgenstern am klaren und wolkenlosen Himmel beim ersten Morgengrauen oder der Vollmond um Mitternacht am klaren und wolkenlosen Himmel am Besinnungstag, dem fünfzehnten Tag?“ "
 }
