--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -46,5 +46,6 @@
   "mn80:9.1": "„Was denkst du, Kaccāna? ",
   "mn80:9.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: der Morgenstern am klaren und wolkenlosen Himmel beim ersten Morgengrauen oder der Vollmond um Mitternacht am klaren und wolkenlosen Himmel am Besinnungstag, dem fünfzehnten Tag?“ ",
   "mn80:9.3": "„Der Vollmond um Mitternacht am klaren und wolkenlosen Himmel am Besinnungstag, dem fünfzehnten Tag, Herr Gotama.“ ",
-  "mn80:10.1": "„Was denkst du, Kaccāna? "
+  "mn80:10.1": "„Was denkst du, Kaccāna? ",
+  "mn80:10.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: der Vollmond um Mitternacht am klaren und wolkenlosen Himmel am Besinnungstag, dem fünfzehnten Tag, oder die Mittagssonne am klaren und wolkenlosen Himmel im letzten Monat der Regenzeit, zur Herbstzeit?“ "
 }
