Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn66_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn66_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn66_translation-de-sabbamitta.json
@@ -138,7 +138,7 @@
   "mn66:17.4": "Warum ist das so? ",
   "mn66:17.5": "Weil ich die Vielfalt der Fähigkeiten verstehe, wie sie auf diesen Menschen zutrifft. ",
   "mn66:17.6": "Das sind die vier Menschen, die man in der Welt findet. ",
-  "mn66:18.1": "Udāyī, es gibt fünf Arten sinnlicher Erregung. ",
+  "mn66:18.1": "Udāyī, es gibt diese fünf Arten sinnlicher Erregung. ",
   "mn66:18.2": "Welche fünf? ",
   "mn66:18.3": "Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "mn66:18.4": "Töne, die das Ohr erkennt … ",
