--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -53,5 +53,6 @@
   "mn80:11.2": "Dennoch sage ich nicht: ",
   "mn80:11.3": "‚Der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.‘ ",
   "mn80:11.4": "Aber zu einem Glanz, der geringer ist als der eines Glühwürmchens, sagst du: ‚Das ist der höchste Glanz.‘ Und du beschreibst diesen Glanz nicht.“ ",
-  "mn80:12.1": "Kaccāna, es gibt diese fünf Arten sinnlicher Erregung. "
+  "mn80:12.1": "Kaccāna, es gibt diese fünf Arten sinnlicher Erregung. ",
+  "mn80:12.2": "Welche fünf? "
 }
