--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -55,5 +55,6 @@
   "mn80:11.4": "Aber zu einem Glanz, der geringer ist als der eines Glühwürmchens, sagst du: ‚Das ist der höchste Glanz.‘ Und du beschreibst diesen Glanz nicht.“ ",
   "mn80:12.1": "Kaccāna, es gibt diese fünf Arten sinnlicher Erregung. ",
   "mn80:12.2": "Welche fünf? ",
-  "mn80:12.3": "Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
+  "mn80:12.3": "Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
+  "mn80:12.4": "Töne, die das Ohr erkennt … "
 }
