Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -56,5 +56,6 @@
   "mn80:12.1": "Kaccāna, es gibt diese fünf Arten sinnlicher Erregung. ",
   "mn80:12.2": "Welche fünf? ",
   "mn80:12.3": "Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
-  "mn80:12.4": "Töne, die das Ohr erkennt … "
+  "mn80:12.4": "Töne, die das Ohr erkennt … ",
+  "mn80:12.5": "Gerüche, die die Nase erkennt … "
 }
