--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -57,5 +57,6 @@
   "mn80:12.2": "Welche fünf? ",
   "mn80:12.3": "Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "mn80:12.4": "Töne, die das Ohr erkennt … ",
-  "mn80:12.5": "Gerüche, die die Nase erkennt … "
+  "mn80:12.5": "Gerüche, die die Nase erkennt … ",
+  "mn80:12.6": "Geschmäcke, die die Zunge erkennt … "
 }
