Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -59,5 +59,6 @@
   "mn80:12.4": "Töne, die das Ohr erkennt … ",
   "mn80:12.5": "Gerüche, die die Nase erkennt … ",
   "mn80:12.6": "Geschmäcke, die die Zunge erkennt … ",
-  "mn80:12.7": "Berührungen, die der Körper erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
+  "mn80:12.7": "Berührungen, die der Körper erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
+  "mn80:12.8": "Das sind die fünf Arten sinnlicher Erregung. "
 }
