Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti109:4.1": "‘ameno e splendente’ è sinonimo dei sei sensi interni. ",
   "iti109:5.1": "‘Sotto ti aspetta un lago’ è sinonimo delle cinque catene inferiori. ",
   "iti109:6.1": "‘Il pericolo delle onde’ è sinonimo di questa rabbia e agitazione. ",
-  "iti109:7.1": "‘Ritorna’ è sinonimo dei cinque oggetti dei piaceri sensuali. ",
+  "iti109:7.1": "‘Mulinelli’ è sinonimo dei cinque oggetti dei piaceri sensuali. ",
   "iti109:8.1": "‘Animali feroci e mostri/demoni’ è sinonimo della donna. [persona attraente?] ",
   "iti109:9.1": "‘Controcorrente’ è sinonimo di rinuncia. ",
   "iti109:10.1": "‘con mani e piedi farebbe uno sforzo’ è sinonimo di sforzarsi (arouse energy). ",
