Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -13,7 +13,7 @@
   "iti109:8.1": "‘Animali feroci e mostri/demoni’ è sinonimo della donna. [persona attraente?] ",
   "iti109:9.1": "‘Controcorrente’ è sinonimo di rinuncia. ",
   "iti109:10.1": "‘con mani e piedi si sforzerebbe’ è sinonimo di sforzarsi (arouse energy). ",
-  "iti109:11.1": "‘una persona in piedi sulla riva, dotata di vista’ è sinonimo di colui che è arrivato alla verità, dell’Arahant, del Buddha perfettamente risvegliato. ",
+  "iti109:11.1": "‘un uomo, dalla buona vista, che sta in piedi sulla riva,’ è sinonimo di colui che è arrivato alla verità, dell’Arahant, del Buddha perfettamente risvegliato. ",
   "iti109:12.1": "Con la sofferenza lascerebbe andare anche i piaceri sensuali, ",
   "iti109:12.2": "desiderando di arrivare alla liberazione da ogni giogo. ",
   "iti109:12.3": "Conoscendo perfettamente con il cuore ben liberato, ",
