Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -63,5 +63,6 @@
   "mn80:12.8": "Das sind die fünf Arten sinnlicher Erregung. ",
   "mn80:13.1": "Das Glück und die Freude, die von diesen fünf Arten sinnlicher Erregung kommen, nennt man Sinnenfreuden. ",
   "mn80:13.2": "Es heißt: ‚Von den Sinnen stammen die Sinnenfreuden. Jenseits der Sinnenfreuden ist die Freude, die das Sinnliche übersteigt; sie gilt als die beste davon.‘ ",
-  "mn80:14.1": "Daraufhin sagte Vekhanasa zum Buddha: "
+  "mn80:14.1": "Daraufhin sagte Vekhanasa zum Buddha: ",
+  "mn80:14.2": "„Es ist unglaublich, Herr Gotama, es ist erstaunlich! "
 }
