Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -67,5 +67,6 @@
   "mn80:14.2": "„Es ist unglaublich, Herr Gotama, es ist erstaunlich! ",
   "mn80:14.3": "Wie treffend Herr Gotama das gesagt hat! ",
   "mn80:14.4": "‚Von den Sinnen stammen die Sinnenfreuden. Jenseits der Sinnenfreuden ist die Freude, die das Sinnliche übersteigt; sie gilt als die beste davon.‘ ",
-  "mn80:14.5": "Herr Gotama, von den Sinnen stammen die Sinnenfreuden. Jenseits der Sinnenfreuden ist die Freude, die das Sinnliche übersteigt; sie gilt als die beste davon.“ "
+  "mn80:14.5": "Herr Gotama, von den Sinnen stammen die Sinnenfreuden. Jenseits der Sinnenfreuden ist die Freude, die das Sinnliche übersteigt; sie gilt als die beste davon.“ ",
+  "mn80:14.6": "„it’s hard for to understand, da du eine andere Ansicht, ein anderes Bekenntnis und einen anderen Glauben hast, ist es schwer für dich, "
 }
