Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -12,7 +12,7 @@
   "iti110:8.1": "sta seduto, ",
   "iti110:9.1": "o sta sdraiato, a un cercatore desto appaiono pensieri sensuali, avversi e crudeli, ",
   "iti110:9.2": "e quel cercatore non li tollera, ma li lascia andare, li butta fuori, li porta a termine e li oblitera, ",
-  "iti110:9.3": "allora quel cercatore desto è detto uno ardente, timorato, che sempre costantemente si rinvigorisce, ed è determinato. ",
+  "iti110:9.3": "allora quel cercatore desto è detto uno ardente, timorato, sempre in continuo rinvigorimento, ed è determinato. ",
   "iti110:10.1": "x ",
   "iti110:10.2": "x ",
   "iti110:10.3": "se pensa un pensiero ",
