Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
@@ -11,6 +11,6 @@
   "thig9.1:2.4": "Отринувшие все влеченья. ",
   "thig9.1:3.1": "О Ваддха, взращивай тот путь, ",
   "thig9.1:3.2": "Которым следуют отшельники, ",
-  "thig9.1:3.3": "Дабы обрести видение, ",
+  "thig9.1:3.3": "Дабы обрести в_и_дение, ",
   "thig9.1:3.4": "Страданьям положить конец. "
 }
