Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
@@ -22,5 +22,5 @@
   "thig9.1:6.1": "Все загрязнения окончены ",
   "thig9.1:6.2": "Во мне — усердной, погружённой в джхану. ",
   "thig9.1:6.3": "Три знания открылись для меня, ",
-  "thig9.1:6.4": "Заветы Татхагаты мной исполнены всецело. "
+  "thig9.1:6.4": "Заветы Татхагаты мной исполнены всецело». "
 }
