Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
@@ -32,5 +32,6 @@
   "thig9.1:8.3": "Я устремился к Дхамме с чувством безотлагательности, ",
   "thig9.1:8.4": "Дабы найти надёжное убежище. ",
   "thig9.1:9.1": "Неутомимый, пылкий в усердии своём, ",
-  "thig9.1:9.2": "И днем, и ночью в решимости, "
+  "thig9.1:9.2": "И днем, и ночью в решимости, ",
+  "thig9.1:9.3": "Вдохновлённый своею матерью, "
 }
