Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn78_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn78_translation-de-sabbamitta.json
@@ -40,7 +40,7 @@
   "mn78:8.5": "Und ein kleiner Säugling hat nicht einmal ein Konzept von ‚Gedanke‘, wie kann er da schlechte Gedanken denken außer bloßem Quengeln? ",
   "mn78:8.6": "Und ein kleiner Säugling hat nicht einmal ein Konzept von ‚Lebenserwerb‘, wie kann er da seinen Unterhalt mit einem schlechten Lebenserwerb verdienen außer an der Brust der Mutter? ",
   "mn78:8.7": "Wenn es wahr ist, was Uggāhamāna sagt, so ist ein kleiner stumpfer, hilfloser Säugling ein unbesiegbarer Asket, der im Tauglichen vervollkommnet ist, sich im Tauglichen auszeichnet und zum Höchsten gelangt ist. ",
-  "mn78:8.8": "Wenn eine Person vier Eigenschaften besitzt, beschreibe ich sie nicht als einen unbesiegbaren Asketen, der im Tauglichen vervollkommnet ist, sich im Tauglichen auszeichnet und zum Höchsten gelangt ist, sondern als jemanden, der die Stufe eines kleinen stumpfen,  Säuglings erreicht hat. ",
+  "mn78:8.8": "Wenn eine Person vier Eigenschaften besitzt, beschreibe ich sie nicht als einen unbesiegbaren Asketen, der im Tauglichen vervollkommnet ist, sich im Tauglichen auszeichnet und zum Höchsten gelangt ist, sondern als jemanden, der die Stufe eines kleinen stumpfen, hilflosen Säuglings erreicht hat. ",
   "mn78:8.9": "Welche vier? ",
   "mn78:8.10": "Da tut jemand nichts Schlechtes mit dem Körper, spricht keine schlechten Worte, denkt keine schlechten Gedanken und verdient seinen Unterhalt nicht mit einem schlechten Lebenserwerb. ",
   "mn78:8.11": "Wenn eine Person diese vier Eigenschaften besitzt, beschreibe ich sie nicht als einen unbesiegbaren Asketen, der im Tauglichen vervollkommnet ist, sich im Tauglichen auszeichnet und zum Höchsten gelangt ist, sondern als jemanden, der die Stufe eines kleinen stumpfen hilflosen Säuglings erreicht hat. ",
