Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -85,5 +85,5 @@
   "mn80:16.6": "Wenn er gemäß der Anleitung übt, wird er bald selbst erkennen und sehen: ",
   "mn80:16.7": "‚So ist man also richtig von der Fessel befreit, nämlich der Fessel der Unwissenheit.‘ ",
   "mn80:16.8": "Wie wenn da ein kleiner stumpfer, hilfloser Säugling bis zum Hals in Windeln eingebunden wäre: ",
-  "mn80:16.9": "Wenn er heranwächst und seine Fähigkeiten reifen heran, wird er entsprechend von diesen Fesseln befreit. "
+  "mn80:16.9": "Wenn er heranwächst und seine Fähigkeiten reifen heran, wird er entsprechend von diesen Fesseln erlöst. "
 }
