Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -25,6 +25,6 @@
   "iti110:12.2": "seduto o sdraiato, ",
   "iti110:12.3": "avendo placato il pensiero, ",
   "iti110:12.4": "è devoto al calmare i pensieri (alla pacificazione dei pensieri) ",
-  "iti110:12.5": "questo tipo di cercatore è capace ",
+  "iti110:12.5": "questo tipo di cercatore è capace (in grado) ",
   "iti110:12.6": "di ottenere la suprema illuminazione. "
 }
