Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti111:9.1": "In alto, al centro e in basso, ",
   "iti111:9.2": "fin dove si estende la terra, ",
   "iti111:9.3": "esaminando il Dhamma, ",
-  "iti111:9.4": "l’ascesa e la caduta degli aggregati. ** ",
+  "iti111:9.4": "l’ascesa e la caduta delle cinque cataste (khandha), ** ",
   "iti111:10.1": "Vivendo così zelante, ",
   "iti111:10.2": "in serenità, non arrogante ",
   "iti111:10.3": "alla corretta tranquillità del cuore ",
