Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -13,7 +13,7 @@
   "iti111:9.4": "l’ascesa e la caduta delle cinque cataste (khandha). ** ",
   "iti111:10.1": "Vivendo così ardente, ",
   "iti111:10.2": "in serenità, non arrogante ",
-  "iti111:10.3": "alla corretta tranquillità del cuore ",
+  "iti111:10.3": "in quello che conduce alla tranquillità del cuore ",
   "iti111:10.4": "sempre vigile/consapevole si addestra, ",
   "iti111:10.5": "sempre risoluto, ",
   "iti111:10.6": "è chiamato uno di tale qualità. "
